<?xml version="1.0" encoding="utf-8"?>
<!--
                    Copyright (c), NXP Semiconductors

                       (C)NXP Semiconductors B.V.2014
         All rights are reserved. Reproduction in whole or in part is
        prohibited without the written consent of the copyright owner.
    NXP reserves the right to make changes without notice at any time.
   NXP makes no warranty, expressed, implied or statutory, including but
   not limited to any implied warranty of merchantability or fitness for any
  particular purpose, or that the use will not infringe any third party patent,
   copyright or trademark. NXP must not be liable for any loss or damage
                            arising from its use.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_accent"
        android:gravity="center_vertical" >

        <RelativeLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ph_border_different_color_one" >

            <TextView
                android:id="@+id/settings_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/custom_msg"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/role_change_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ph_border_different_color_two"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:padding="15dp" >

                <RadioButton
                    android:id="@+id/result_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/result"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/execute_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/execute"
                    android:textColor="@android:color/black" />
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/result_execute_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group" >

                <RelativeLayout
                    android:id="@+id/test_case_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/test_case_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/test_case_id"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/test_case_cb_edit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/input_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/pattern_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/test_case_layout" >

                    <TextView
                        android:id="@+id/pattern_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/pattern_number"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/pattern_no_edit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/input_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/status_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pattern_layout" >

                    <TextView
                        android:id="@+id/status_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/status_ce"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/rfu_1_edit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/status_cb"
                        android:layout_centerVertical="true"
                        android:hint="@string/input_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rfu1_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status_layout" >

                    <TextView
                        android:id="@+id/rfu1_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/rfu_1"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/status_edit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/input_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rfu2_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rfu1_layout" >

                    <TextView
                        android:id="@+id/rfu2_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/rfu_2"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/rfu2_edit_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/input_text" />
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/result_execute_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/done" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
