<?xml version="1.0" encoding="utf-8"?>
<!--
                    Copyright (c), NXP Semiconductors

                       (C)NXP Semiconductors B.V.2014
         All rights are reserved. Reproduction in whole or in part is
        prohibited without the written consent of the copyright owner.
    NXP reserves the right to make changes without notice at any time.
   NXP makes no warranty, expressed, implied or statutory, including but
   not limited to any implied warranty of merchantability or fitness for any
  particular purpose, or that the use will not infringe any third party patent,
   copyright or trademark. NXP must not be liable for any loss or damage
                            arising from its use.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/header_layout"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/nxp_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/nxp_img" />

        <TextView
            android:id="@+id/data_text_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:text="@string/dta_test_app"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/header_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/ph_border_different_color_two" >

        <TextView
            android:id="@+id/logcat"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/log_cat"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#111111"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/back"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:background="@drawable/ph_border_different_color_one"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:singleLine="false"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#111111"
                android:textSize="15sp" />
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/copyrights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="19dp"
            android:text="@string/copyright_nxp_semiconductors"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView

            android:id="@+id/version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:text="Version Number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="13sp" />
    </RelativeLayout>

</RelativeLayout>
